--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,11 @@
     "@babel/core": "^7.21.3",
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.2.1",
     "nodemon": "^2.0.22",
@@ -26,6 +29,7 @@
     "@prisma/client": "^4.12.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
