--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.2.1",
     "nodemon": "^2.0.22",
     "prisma": "^4.12.0",
@@ -38,7 +39,8 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "babel": {
     "presets": [
